--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>lmap</title>
     <link rel="stylesheet" type="text/css" href="src/styles/base.css">
     <link rel="stylesheet" type="text/css" href="src/styles/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="src/styles/antd.css">
     <link rel="stylesheet" type="text/css" href="assets/libs/leaflet/leaflet.css">
     <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
     <link rel="stylesheet" type="text/css" href="src/scripts/L.VisualClick.css">
@@ -44,34 +45,7 @@
             filter: alpha(opacity=0);
         }
     }
-    
-    .aa {
-        display: inline-block;
-        vertical-align: middle;
-        -webkit-transform: scale(1.25);
-        margin: 20px 10px;
-        width: 50px;
-        height: 50px;
-        line-height: 2.6;
-        font-size: 15px;
-        color: #e1dada;
-        text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 100px;
-        text-decoration: none;
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f4f4f4), color-stop(100%, #e3e3e3));
-        background-image: -moz-gradient(linear, left top, left bottom, color-stop(0%, #f4f4f4), color-stop(100%, #e3e3e3));
-        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25), 10px 10px 15px #e3e3e3, -10px 10px 15px #e3e3e3, -15px -15px 15px rgba(255, 255, 255, 0.4), 15px -15px 15px rgba(255, 255, 255, 0.4), inset 0px 2px 0px white;
-        -webkit-transition: box-shadow 0.3s ease-in-out, background-image 0.3s ease-in-out, text-shadow 0.5s linear, color 0.5s linear;
-        -moz-transition: box-shadow 0.3s ease-in-out, background-image 0.3s ease-in-out, text-shadow 0.5s linear, color 0.5s linear;
-    }
-    
-    .aa.active {
-        color: #00d0b0;
-        text-shadow: 0px 0px 7px #37ffb1;
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e3e3e3), color-stop(100%, #f4f4f4));
-        background-image: -moz-gradient(linear, left top, left bottom, color-stop(0%, #e3e3e3), color-stop(100%, #f4f4f4));
-        box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.15), 10px 10px 15px rgba(255, 255, 255, 0.4), -10px 10px 15px rgba(255, 255, 255, 0.4), -10px -10px 15px #e3e3e3, 10px -10px 15px #e3e3e3, inset 0px -3px 0px rgba(255, 255, 255, 0.4), inset 0px 3px 3px rgba(0, 0, 0, 0.04);
-    }
+
     </style>
 </head>
 
