--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/libs/leaflet/leaflet.css">
     <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
     <link rel="stylesheet" type="text/css" href="src/scripts/L.VisualClick.css">
+    <link rel="stylesheet" type="text/css" href="src/styles/leafletdraw.css">
     <style>
     .leaflet-pulsing-icon {
         border-radius: 100%;
@@ -58,6 +59,7 @@
     <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
     <script src="src/scripts/L.VisualClick.js"></script>
     <script src="assets/bundle.js"></script>
+    <script src="lmsg.js"></script>
 </body>
 
 </html>
