--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="assets/libs/leaflet/esri-leaflet.js"></script>
     <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
     <script src="src/scripts/L.VisualClick.js"></script>
+    <script src="assets/config/config.js"></script>
     <script src="assets/bundle.js"></script>
 </body>
 
