--- a/assets/index.html
+++ b/assets/index.html
@@ -11,6 +11,7 @@
     <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
     <link rel="stylesheet" type="text/css" href="scripts/L.VisualClick.css">
     <link rel="stylesheet" type="text/css" href="styles/leafletdraw.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
     .leaflet-pulsing-icon {
         border-radius: 100%;
