--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
     <link rel="stylesheet" type="text/css" href="src/scripts/L.VisualClick.css">
     <link rel="stylesheet" type="text/css" href="src/styles/leafletdraw.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+
     <style>
     .leaflet-pulsing-icon {
         border-radius: 100%;
@@ -59,6 +61,7 @@
     <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
     <script src="src/scripts/L.VisualClick.js"></script>
     <script src="assets/config/config.js"></script>
+    <script src="assets/config/config_2screen1.js"></script>
     <script src="assets/bundle.js"></script>
 </body>
 
