--- a/assets/index.html
+++ b/assets/index.html
@@ -2,64 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>lmap</title>
-    <link rel="stylesheet" type="text/css" href="styles/base.css">
-    <link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="libs/leaflet/leaflet.css">
-    <link rel="stylesheet" type="text/css" href="styles/antd.css">
-    <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
-    <link rel="stylesheet" type="text/css" href="scripts/L.VisualClick.css">
-    <link rel="stylesheet" type="text/css" href="styles/leafletdraw.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-    .leaflet-pulsing-icon {
-        border-radius: 100%;
-        box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.75);
-    }
-    
-    .leaflet-pulsing-icon:after {
-        content: "";
-        -webkit-border-radius: 100%;
-        border-radius: 100%;
-        height: 300%;
-        width: 300%;
-        position: absolute;
-        margin: -100% 0 0 -100%;
-    }
-    
-    @keyframes pulsate {
-        0% {
-            transform: scale(0.1, 0.1);
-            opacity: 0;
-            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-            filter: alpha(opacity=0);
-        }
-        50% {
-            opacity: 1;
-            -ms-filter: none;
-            filter: none;
-        }
-        100% {
-            transform: scale(1.2, 1.2);
-            opacity: 0;
-            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-            filter: alpha(opacity=0);
-        }
-    }
-
-    </style>
+	<meta charset="utf-8">
+	<title>lmap</title>
+	<link rel="stylesheet" type="text/css" href="styles/base.css">
+	<link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="libs/leaflet/leaflet.css">
+	<link rel="stylesheet" type="text/css" href="styles/antd.css">
+	<link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
+	<link rel="stylesheet" type="text/css" href="scripts/L.VisualClick.css">
+	<link rel="stylesheet" type="text/css" href="libs/leaflet/plugins/leaflet.draw.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div id="root"></div>
-    <script src="libs/react.min.js"></script>
-    <script src="libs/react-dom.min.js"></script>
-    <script src="libs/leaflet/leaflet.js"></script>
-    <script src="libs/leaflet/esri-leaflet.js"></script>
-<script src="scripts/L.VisualClick.js"></script>
-    <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-    <script src="bundle.js"></script>
+	<div id="root"></div>
+	<script src="libs/react.min.js"></script>
+	<script src="libs/react-dom.min.js"></script>
+	<script src="libs/leaflet/leaflet.js"></script>
+	<script src="libs/leaflet/esri-leaflet.js"></script>
+	<script src="libs/leaflet/plugins/leaflet.draw.js"></script>
+
+	<script src="libs/antd/antd.min.js"></script>
+
+	<script src="scripts/L.VisualClick.js"></script>
+	<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+
+    <script src="config/client.js"></script>
+	<script src="bundle.js"></script>
 </body>
 
 </html>
