--- a/assets/index.html
+++ b/assets/index.html
@@ -26,7 +26,7 @@
 
 	<script src="scripts/L.VisualClick.js"></script>
 	<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-
+	<script src="libs/echarts.source.js"></script>
     <script src="config/client.js"></script>
 	<script src="bundle.js"></script>
 </body>
