--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="libs/leaflet/leaflet.css">
 	<link rel="stylesheet" type="text/css" href="styles/antd.min.css">
-	<link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
+	<link rel="Shortcut Icon" href="images/favicon.ico" title="Icon">
 	<link rel="stylesheet" type="text/css" href="scripts/L.VisualClick.css">
 	<link rel="stylesheet" type="text/css" href="libs/leaflet/plugins/leaflet.draw.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
