--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="src/styles/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="src/styles/antd.min.css">
     <link rel="stylesheet" type="text/css" href="assets/libs/leaflet/leaflet.css">
-    <link rel="Shortcut Icon" href="http://a.amap.com/lbs-p/static/img/887205ad.png" title="GitHub">
+    <link rel="Shortcut Icon" href="assets/images/favicon.ico" title="Icon">
     <link rel="stylesheet" type="text/css" href="src/scripts/L.VisualClick.css">
     <link rel="stylesheet" type="text/css" href="assets/libs/leaflet/plugins/leaflet.draw.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
