--- a/assets/index.html
+++ b/assets/index.html
@@ -25,7 +25,7 @@
 	<script src="libs/antd/antd.min.js"></script>
 
 	<script src="scripts/L.VisualClick.js"></script>
-	<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+	<script src="libs/jquery.min.js"></script>
 	<script src="libs/echarts.source.js"></script>
     <script src="config/client.js"></script>
 	<script src="bundle.js"></script>
