--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="assets/libs/react-dom.js"></script>
     <script src="assets/libs/leaflet/leaflet.js"></script>
     <script src="assets/libs/leaflet/esri-leaflet.js"></script>
-    <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+    <!-- <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script> -->
+    <script src="assets/libs/jquery.min.js"></script>
     <script src="assets/libs/leaflet/plugins/leaflet.draw.js"></script>
     <script src="src/scripts/L.VisualClick.js"></script>
     <script src="assets/libs/antd/antd.js"></script>
